--- a/레이아웃.html
+++ b/레이아웃.html
@@ -69,7 +69,7 @@
     }
     .open-box {
       background: #f9f9f9;
-      color: #93c2ff;
+      color: #99ccff;
       font-size: 15px;
       font-weight: bold;
       padding: 15px;
@@ -126,7 +126,7 @@
       background: #f0f0f0;
     }
     .tab.active {
-      background: #93c2ff;
+      background: #99ccff;
       color: #fff;
     }
 
@@ -168,7 +168,7 @@
       font-weight: bold;
     }
     .calendar-grid .today {
-      background: #93c2ff;
+      background: #99ccff;
       color: #fff;
       font-weight: bold;
     }
